--- a/_config.yml
+++ b/_config.yml
@@ -104,16 +104,16 @@ keywords: "astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt"
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+navbar-col: "#0B0C10"
+navbar-text-col: "#66FCF1"
+navbar-border-col: "#66FCF1"
+page-col: "#0B0C10"
+text-col: "#E4E7EA"
+link-col: "#45A29E"
+hover-col: "#45A29E"
+footer-col: "#1F2833"
+footer-text-col: "#ffffff"
+footer-link-col: "#0B0C10"
 
 # navbar-col: "#242427"
 # navbar-text-col: "#E4E7EA"
