--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: AstroClubIITK
 titlebar: Astronomy Club &#8226; IIT Kanpur
 
 # Your name to show in the footer
-author: Gurbaaz Singh Nandra
+author: Gurbaaz Singh Nandra, Varun Muralidharan
 
 # --- List of links in the navigation bar --- #
 collections:
