Summer projects update; yt link added

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-network-links:
   github: astroclubiitk
   instagram: astroclub.iitk
 # patreon: DeanAttali
-# youtube: c/daattali
+  youtube: "user/AstronomyClubIITK"
 #  medium: yourname
 #  reddit: yourname
   linkedin: "company/astroclubiitk"
