--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: AstroClubIITK
 titlebar: Astronomy Club &#8226; IIT Kanpur
 
 # Your name to show in the footer
-author: Gurbaaz Singh Nandra, Varun Muralidharan
+author: Gurbaaz Singh Nandra
 
 # --- List of links in the navigation bar --- #
 collections:
@@ -20,6 +20,7 @@ collections:
   sponsors:
   ex_team:
   resources:
+  associate_members:
 
 navbar-links:
   Summer Projects '21: "summer-projects21"
