Add newsletter, Update bg imgs

--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt,space"
+keywords: "astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt,space,rocket,astro,nasa,spacex,india,students"
 
 # --- Colours / background image --- #
 
