--- a/_config.yml
+++ b/_config.yml
@@ -172,7 +172,7 @@ footer-link-col: "#0B0C10"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-disqus: "https-astroclubiitk-github-io"
+# disqus: "https-astroclubiitk-github-io"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 # fb_comment_id: "https://www.facebook.com"
