update future, true

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: ""
 # Name of website
 title: AstroClubIITK
 titlebar: Astronomy Club &#8226; IIT Kanpur
+future: true
 
 # Your name to show in the footer
 author: Astronomy Club IIT Kanpur 
