--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ titlebar: Astronomy Club &#8226; IIT Kanpur
 future: true
 
 # Your name to show in the footer
-author: Astronomy Club IIT Kanput
+author: Astronomy Club IIT Kanpur
 
 # Collections
 collections:
