--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ collections:
     permalink: /:collection/:title
   gallery:
   team:
+  sponsors:
 
 ###############################################
 # --- List of links in the navigation bar --- #
