--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,12 @@ collections:
 ###############################################
 
 navbar-links:
-  projects: "projects"
-  blogs: "blogs"
-  resources: "resources"
-  gallery: "gallery"
-  team: "team"
+  projects: 'projects'
+  blogs: 'blogs'
+  resources: 'resources'
+  wiki: 'astro_wiki'
+  gallery: 'gallery'
+  team: 'team'
 
 ################
 # --- Logo --- #
@@ -46,7 +47,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/logo.png"
+avatar: '/assets/img/logo.png'
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -55,7 +56,6 @@ round-avatar: true
 # then specify the following parameter
 #title-img: /path/to/image
 
-
 #####################################
 # --- Footer social media links --- #
 #####################################
@@ -63,15 +63,15 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "astronomyclub.iitk@gmail.com"
+  email: 'astronomyclub.iitk@gmail.com'
   facebook: astroclub.iitk
   github: astroclubiitk
   instagram: astroclub.iitk
-# patreon: DeanAttali
-  youtube: "user/AstronomyClubIITK"
-#  medium: yourname
-#  reddit: yourname
-  linkedin: "company/astroclubiitk"
+  # patreon: DeanAttali
+  youtube: 'user/AstronomyClubIITK'
+  #  medium: yourname
+  #  reddit: yourname
+  linkedin: 'company/astroclubiitk'
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -126,7 +126,7 @@ feed_show_tags: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt,space,rocket,astro,nasa,spacex,india,students"
+keywords: 'astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt,space,rocket,astro,nasa,spacex,india,students'
 
 ######################################
 # --- Colours / background image --- #
@@ -134,16 +134,16 @@ keywords: "astronomy,thatsiitk,iitk,iit,kanpur,club,science,technology,snt,space
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#0B0C10"
-navbar-text-col: "#66FCF1"
-navbar-border-col: "#66FCF1"
-page-col: "#0B0C10"
-text-col: "#E4E7EA"
-link-col: "#45A29E"
-hover-col: "#45A29E"
-footer-col: "#1F2833"
-footer-text-col: "#ffffff"
-footer-link-col: "#0B0C10"
+navbar-col: '#0B0C10'
+navbar-text-col: '#66FCF1'
+navbar-border-col: '#66FCF1'
+page-col: '#0B0C10'
+text-col: '#E4E7EA'
+link-col: '#45A29E'
+hover-col: '#45A29E'
+footer-col: '#1F2833'
+footer-text-col: '#ffffff'
+footer-link-col: '#0B0C10'
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
@@ -211,23 +211,23 @@ footer-link-col: "#0B0C10"
 #  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
 
 # To use Staticman comments, uncomment the following section. You may leave the reCaptcha
-# section commented if you aren't using reCaptcha for spam protection. 
-# Using Staticman requires advanced knowledge, please consult 
-# https://github.com/eduardoboucas/staticman/ and https://staticman.net/ for further 
-# instructions. For any support with staticman please direct questions to staticman and 
+# section commented if you aren't using reCaptcha for spam protection.
+# Using Staticman requires advanced knowledge, please consult
+# https://github.com/eduardoboucas/staticman/ and https://staticman.net/ for further
+# instructions. For any support with staticman please direct questions to staticman and
 # not to BeautifulJekyll.
 #staticman:
 #  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
 #  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
 #  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
-#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
+#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well)
 #    siteKey  : # You need to apply for a site key on Google
 #    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
 
 # To use giscus comments:
-# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository, 
+# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository,
 # (2) Install the giscus app in your repository (details at https://giscus.app),
-# (3) Fill in *all* the parameters below 
+# (3) Fill in *all* the parameters below
 # See more details about giscus and each of the following parameters at https://giscus.app
 #giscus:
 #  hostname: giscus.app # Replace with your giscus instance's hostname if self-hosting
@@ -245,7 +245,7 @@ footer-link-col: "#0B0C10"
 ################
 
 # Ruby Date Format to show dates of posts
-date_format: "%B %-d, %Y"
+date_format: '%B %-d, %Y'
 
 # Facebook App ID
 #fb_app_id: ""
@@ -255,7 +255,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: 'America/Toronto'
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
@@ -266,19 +266,17 @@ kramdown:
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
+  - scope:
+      path: ''
+      type: 'posts'
     values:
-      layout: "post"
-      comments: true  # add comments to all blog posts
+      layout: 'post'
+      comments: true # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
-  -
-    scope:
-      path: "" # any file that's not a post will be a "page" layout by default
+  - scope:
+      path: '' # any file that's not a post will be a "page" layout by default
     values:
-      layout: "page"
+      layout: 'page'
 
 # Exclude these files from production site
 exclude:
@@ -294,7 +292,6 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
