--- a/_config.yml
+++ b/_config.yml
@@ -168,7 +168,7 @@ footer-link-col: '#0B0C10'
 #################################
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "G-E2M6Y9TXGN"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
